Align fix

--- a/app/assets/stylesheets/flipbook.css.scss
+++ b/app/assets/stylesheets/flipbook.css.scss
@@ -101,7 +101,6 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
   text-align:center;
-  margin: 50px 25%;
 }
 
 #settings{
